# live-telemetry-evo

./: .gitignore  .pylintrc  ACEvoOverlay.spec  CHANGELOG.md  LiveTelemetryEvo.spec  MEMORY.md  OVERTAKE.md  README.md  build.py  fetch_icons.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh
.github/workflows/: release.yml
docs/: SHARED_MEMORY.md
src/overlay/: __main__.py  app.py  chart.py  colors.py  fonts.py  frame_bus.py  interpolation.py  layout.py  logger.py  paths.py  resources.py  settings.py  telemetry.py  tray.py  updater.py  window.py
src/overlay/sources/: __init__.py  _win32_mapping.py  ac1.py  ac1_acd.py  ac1_install.py  ac_evo.py  acc.py  acrally.py  base.py  detect.py  dump.py  synthetic.py
src/overlay/widgets/: countdown.py  detection.py  draggable.py  engine_view.py  inputs_view.py  reset_button.py  size_button.py  wheel_view.py
tools/: extract_changelog.py  inspect_acrally.py  probe_rally_layout.py  probe_shm.py  test_acrally_source.py
