[project]
name = "live-telemetry-evo"
version = "0.6.0"
description = "Transparent always-on-top telemetry overlay for Assetto Corsa Evo and Assetto Corsa"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.0",
    "pyqtgraph>=0.13.4",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
